horizontal scroll fixed

--- a/style.css
+++ b/style.css
@@ -1,29 +1,37 @@
-*{
+/* *{
+    
+    
     margin: 0px;
     padding: 0px; 
-
-    /* color: #5d4954; */
+    overflow-x: hidden;
     outline: none;
-}
+} */
+
+
+
 
 ::-webkit-scrollbar {
-    display: none;
+    /* display: none; */
 }
 
 html {
-    -webkit-text-size-adjust: none;
-    -ms-overflow-style: hidden;
+    /* -webkit-text-size-adjust: none; */
+    /* -ms-overflow-style: hidden; */
    
 }
 
 div.disabled {
-    overflow-x: hidden;
-    overflow-y: hidden;  
+    /* overflow-x: hidden; */
+    /* overflow-y: hidden;   */
 }
 
 body{
     background-color: black;
-    overflow-x: hidden;
+    overflow-y:auto;
+    overflow-x: hidden !important;
+    margin-left: 15px;
+    margin-right:15px;
+    padding: 0px; 
 }
 
 .carousel-inner{
